[gd_scene load_steps=11 format=3 uid="uid://b08h8oh4o2550"]

[ext_resource type="PackedScene" uid="uid://cy36aygvs66pn" path="res://assets/models/gobot/gobot_skin.tscn" id="1_6agcr"]
[ext_resource type="PackedScene" uid="uid://jbq0ujtmu7cx" path="res://scenes/mini_game_rental_ui.tscn" id="2_10k8o"]
[ext_resource type="Script" path="res://scripts/RentalGameManager.gd" id="3_fnptv"]
[ext_resource type="PackedScene" uid="uid://c122tuvpq5y52" path="res://scenes/quick_pause.tscn" id="4_l4gis"]
[ext_resource type="PackedScene" uid="uid://c21p7yb10y5sk" path="res://scenes/mini_game_win_screen.tscn" id="5_kluee"]
[ext_resource type="PackedScene" uid="uid://cgrqwd2215plj" path="res://assets/models/mini_game_level/Rental Mini Game - Level - R3 - Export V1.glb" id="6_35e1p"]
[ext_resource type="PackedScene" uid="uid://c8njwipxwv8fu" path="res://scenes/mini_game_countdown.tscn" id="7_jvvjy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gj0iq"]

[sub_resource type="Sky" id="Sky_hppxj"]
sky_material = SubResource("ProceduralSkyMaterial_gj0iq")

[sub_resource type="Environment" id="Environment_wvhs2"]
background_mode = 2
sky = SubResource("Sky_hppxj")

[node name="MiniGameRental" type="Node3D"]

[node name="Clerk" parent="." instance=ExtResource("1_6agcr")]
transform = Transform3D(-0.82806, 0, -0.560639, 0, 1, 0, 0.560639, 0, -0.82806, 0.57332, 0, -3.77934)

[node name="Clerk2" parent="." node_paths=PackedStringArray("gobot_model") instance=ExtResource("1_6agcr")]
transform = Transform3D(-0.936788, 0, 0.349897, 0, 1, 0, -0.349897, 0, -0.936788, 13.9, 0, -14.284)
gobot_model = NodePath("../Clerk/gobot/Armature/Skeleton3D/Gobot")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MiniGameRentalUI" parent="CanvasLayer" instance=ExtResource("2_10k8o")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wvhs2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.83884, 0)

[node name="RentalGameManager" type="Node" parent="."]
script = ExtResource("3_fnptv")

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="NextTimer" type="Timer" parent="."]
one_shot = true

[node name="QuickPause" parent="." instance=ExtResource("4_l4gis")]
visible = false

[node name="MiniGameWinScreen" parent="." instance=ExtResource("5_kluee")]
visible = false

[node name="Rental Mini Game - Level - R3 - Export V1" parent="." instance=ExtResource("6_35e1p")]

[node name="Customers" type="Node3D" parent="."]

[node name="ExitAnimation" type="Timer" parent="."]
one_shot = true

[node name="CountdownTimer" type="Timer" parent="."]
one_shot = true

[node name="MiniGameCountdown" parent="." instance=ExtResource("7_jvvjy")]
